# Limbic-Flow

./: .env.example  .gitignore  LICENSE  README.md  cli_chat.py  deepseek_cli.py  limbic_cli.py  memory_store.json  pyproject.toml  requirements.txt  test_amygdala.py  test_limbic_flow.py  test_location_features.py  test_pipeline.py
assets/personas/: girlfriend.yaml
docs/: AI_MODULE.md  ARTICULATION_TEST_REPORT.md  LOGGING.md  Limbic-Flow-Draft.drawio  MOTOR_CORTEX.md  architecture.md
limbic_flow/: __init__.py
limbic_flow/api/: main.py
limbic_flow/core/: emotion_engine.py  types.py
limbic_flow/core/ai/: __init__.py  base.py  embedding.py  factory.py
limbic_flow/core/ai/adapters/: __init__.py  anthropic.py  deepseek.py  mock.py  ollama.py  openai.py
limbic_flow/core/amygdala/: __init__.py
limbic_flow/core/articulation/: __init__.py  action_event.py  motor_cortex.py  streaming_integration.py
limbic_flow/core/articulation/tts/: base.py  factory.py
limbic_flow/core/articulation/tts/backends/: mock.py  qwen_local.py
limbic_flow/core/brain/: __init__.py  persona.py  processor.py
limbic_flow/core/hippocampus/: __init__.py
limbic_flow/core/location/: __init__.py
limbic_flow/core/neocortex/: __init__.py
limbic_flow/core/streaming/: __init__.py
limbic_flow/middleware/pathology/: __init__.py  base.py  pathologies.py
limbic_flow/pipeline/: __init__.py
limbic_flow/tools/: __init__.py  emotion_chat.py
limbic_flow/utils/: __init__.py  logger.py
